# coursera_black

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  initial.cpp  sum.cpp  sum.h
.github/: pull_request_template.md
profile/: profile.h
test_runner_lib/: test_runner.cpp  test_runner.h
week_1/: draft.cpp  san_fail.cpp  san_fail_bad.cpp  san_fail_next.cpp  san_fail_next_bad.cpp
week_2/: CMakeLists.txt  main.cpp  person.proto
week_3/: main.cpp
week_4/: alignment.cpp  draft.cpp  raw.cpp  vector.h
